--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "name": "express-simple-starter",
   "private": true,
   "scripts": {
-    "start": "node index.js",
-    "prestart": "node BD4_Assignment1/initDB.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "express": "^4.18.2"
   }
 }
